<resources>
    <string name="app_name">众觅</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_logo">LogoActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_lead">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_wbshare">WBShareActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purse_accident_insurance_textview">您在点击紧急求助时，
意外保险信用金即会被使用（清空）\n
使用方法：\n
第一个来帮助你的人将获得信用金的1/2\n
第二个来帮助你的人将获得剩余信用金的1/2\n
以此类推...\n
如x发布了1000元的求助A B C接单\n
A是第一个来帮助你的人 将会得到500元\n
B是第二个来帮助你的人 将会得到250元\n
C是第三个来帮助你的人 将会得到125元\n
剩下的125将会回到你的信用金了。\n

（此信用金的分配将由软件平台自动划分）\n
如意外保险信用金用之不还则会影响您在中国的信誉问题。
</string>
    <string name="tv_creditsesame">
        您现已成功绑定芝麻信用分，『众觅』平台将根据您的芝麻信用分以及其它综合信用因素为您分配意外保险信用金。\n\n意外保险信用金将用于您在本平台发布紧急求助，在『众觅』平台绑定芝麻信用分同时也意味着更加诚信的使用愿景。\n\n芝麻信用管理有限公司是合法独立的信用评估及信用管理机构，其推出的芝麻信用是面向社会的信用服务体系，依据方方面面的信息，运用大数据及云计算技术客观呈现个人的信用状况，通过连接各种服务，让每个人都能体验信用所带来的价值。\n\n评分等级说明：350-550，较差；550-600，中等；600-650，良好；650-700，优秀；700-950，极好。
</string>
    <string name="text_newversion">
        您当前使用的为最新版。
    </string>
    <string name="text_versionnumber">
        1.0.0
    </string>
    <string name="tv_myhelpertasksource">
        悬赏信息被多个用户PIN分享最后被解决则属于溯源传播的PIN者按照2%%上级资金分得赏金，最先传播的pin用户获得的赏金更多哦！\n\n
        如：小M发布了1000元的悬赏，PIN分享者A、B，因B分享C看到信息并解决了M的问题\n
        信息传递    小M信息→A→B→C解决了问题\n
        A PIN了一下：1000 * 2%% = 20元\n
        B Pin了一下：（1000 - 20）* 2%% = 19.6元\n
        C接单并完成任务：（1000 - 20 - 19.6）= 960.4元 </string>
    <string name="style_hint">style为数字</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="load_position_fail">获取当前位置失败</string>
    <string name="sosposition">求助地点:</string>
    <string name="text_help_price">求助金额/RMB</string>
    <string name="text_sosscope">求助范围/KM</string>
    <string name="tv_send_sosinf">确认发送求助</string>
    <string name="tv_tip_phone">请绑定手机号</string>
    <string name="tv_tip_emergency_people">请绑定紧急联系人</string>
    <string name="tv_tip_sos_receive">假如\n你是第一个跑到紧急求助人身边将获得信用金的1/2\n假如\n你是第二个跑到紧急求助人身边将获得剩余信用金的1/2\n以此类推...\n\n如x发布了1000元的求助ABC接单\n你是第一个跑到紧急求助人将会得到500元\n你是第二个跑到紧急求助人将会得到250元\n你是第三个跑到紧急求助人将会得到125元</string>
    <string name="tv_tip_ordercompelete">您的问题是否得到了有效解决?</string>
    <string name="tv_tip_real_name">推荐您实名认证\n认证之后将会得到(意外保险信用金)</string>
    <string name="tv_tip_sos_warning">紧急求助一旦发出将无法取消,请确认!意外保险信用金会被扣除。</string>
    <string name="tv_tip_sos_instruction">众觅将自动开启30秒录音,\n并即时通过平台发起紧急求助</string>
    <string name="tv_tip_sos_instruction1">同时通过短信快速通知您的紧急联系人</string>
    <string name="tv_tip_sos_instruction2">如您安全,请尽快取消</string>
    <string name="tv_tip_sos_instruction3">请说出您的求助信息</string>
    <string name="tv_tip_sos_instruction4">现场的录音有助于更快速地帮助到您</string>
    <string name="tv_tip_sos_recording">正在录音...</string>
    <string name="tv_tip_sos_safe">已通知您的紧急联系人</string>
    <string name="tv_tip_sos_safe1">(您的朋友可实时查看您的位置和求助信息)</string>
    <string name="tv_receiver_state_0">等待被选</string>
    <string name="tv_receiver_state_1">正在服务</string>
    <string name="tv_receiver_state_2">完成等赏</string>
    <string name="tv_receiver_state_3">已完成</string>
    <string name="tv_receiver_state_4">申诉审核中</string>
    <string name="tv_receiver_state_5">申诉完成</string>
    <string name="tv_receiver_state_6">等待被选</string>
    <string name="tv_receiver_state_7">放弃任务</string>
    <string name="offline_order_finished">订单已关闭</string>
    <string name="order_rewarded">已领赏</string>
    <string name="order_2b_verify">待审核</string>
    <string name="order_not_pass">未通过</string>
    <string name="order_closed">已关闭</string>
    <string name="order_rewarded_number_fulled">已关闭</string>
    <string name="tv_distribute_state_0">确认人员</string>
    <string name="tv_distribute_state_1">取消订单</string>
    <string name="tv_distribute_state_2">是否完成</string>
    <string name="tv_distribute_state_3">申诉</string>
    <string name="tv_distribute_state_4">申诉完成</string>
    <string name="tv_balancepay">余额支付</string>
    <string name="tv_weixinpay">微信支付</string>
    <string name="tv_tip_weixinpay">推荐安装微信5.0及以上版本的用户使用</string>
    <string name="tv_alipaypay">支付宝支付</string>
    <string name="tv_share_sina">分享微博</string>
    <string name="tv_share_pin">pin了一下</string>
    <string name="tv_share_weixin">分享微信</string>
    <string name="tv_share_qq">分享QQ</string>
    <string name="tv_tip_alipaypay">推荐有支付宝账号的用户使用</string>
    <string name="bt_camera">相机</string>
    <string name="bt_net_help">网络悬赏</string>
    <string name="bt_safe">不需要求助了</string>
    <string name="bt_real_help">线下悬赏</string>
    <string name="bt_photoalbum">相册</string>
    <string name="bt_cancle">取消</string>
    <string name="bt_cancle1">否</string>
    <string name="bt_continue">继续</string>
    <string name="bt_area_5KM">5KM</string>
    <string name="bt_area_10KM">10KM</string>
    <string name="bt_area_15KM">15KM</string>
    <string name="bt_area_unlimited">不限</string>
    <string name="tv_casual">随手拍</string>
    <string name="tv_go_home">宝贝回家</string>
    <string name="tv_supervise">交通监督</string>
    <string name="tv_window_throw">车窗抛物</string>
    <string name="tv_civilization">公益</string>
    <string name="tv_positive_energy">正能量</string>
    <string name="tv_titl_windowthrow_activity">车窗抛物</string>
    <string name="tv_titl_gohome_activity">回家</string>
    <string name="tv_titl_windowthrowinstruction_activity">使用说明</string>
    <string name="tv_title_incivilization_activity">不文明行为举报</string>
    <string name="tv_title_windowthrowreportinof">填写举报信息</string>
    <string name="tv_title_realhelp_activity">发布悬赏</string>
    <string name="tv_title_gohomereportinof">随拍</string>
    <string name="tv_title_windowthrowhistory">历史举报</string>
    <string name="tv_title_gohomehistory">历史拍</string>
    <string name="tv_title_windowthrowupdatasuccess">提交成功</string>
    <string name="tv_title_gohomesuccess">提交成功</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="tv_report_now">我要举报</string>
    <string name="tv_report_now_go_home">我要拍</string>
    <string name="tv_report_now_tip">文明出行,行驶安全</string>
    <string name="tv_report_now_tip_go_home">文明出行,随手拍</string>
    <string name="tv_report_history">历史举报</string>
    <string name="tv_report_history_go_home">历史拍</string>
    <string name="tv_report_history_tip">查看历史举报,更清晰</string>
    <string name="tv_report_history_tip_go_home">查看历史拍摄,更明了</string>
    <string name="tv_instruction">使用说明</string>
    <string name="tv_instruction_go_home">使用说明</string>
    <string name="tv_instruction_tip">清楚规章制度,更直观</string>
    <string name="tv_instruction_tip_go_home">清楚规章制度,更直观</string>
    <string name="tv_report_how">如何进行违法举报?</string>
    <string name="tv_report_how_go_home">如何进行拍摄?</string>
    <string name="tv_report_how_detail">1.拍下60秒以上车窗抛异物视频\n\n2.上传视频\n\n3.审核通过后等待领赏\n\n4.感谢您为城市文明建设尽一份力</string>
    <string name="tv_report_how_detail_go_home">1.发现疑似走失儿童\n\n2.拍照上传\n\n3.感谢为公益事业尽一份力</string>
    <string name="tv_reason_windowthrowinstruction_activity">如何进行违法举报？</string>
    <string name="tv_attention_windowthrowinstruction_activity"></string>
    <string name="tv_reasondetail_windowthrowinstruction_activity">1.对于车窗抛物行为，提供有效的现场视频，审核通过之后，将获得当地相关的政策奖励，同时为城市文明建设尽一份力。\n\n2.违法举报视频需要拍摄60秒以上。\n\n3.违法举报的图片、视频，要清晰的反映违法车辆车牌号、外观、违法事实，建议在图像中清晰显示出违法地点的标志性建筑。\n\n4.举报者需要严格遵守交通规则，不得在妨碍交通安全的情况下进行拍摄。</string>
    <string name="tv_reasondetail_gohomeinstruction_activity">如何进行拍摄？\n\n1.当发现疑似走失的儿童时，可以使用我要拍功能，拍下儿童照片，系统将把照片上传到数据库，方便进行失踪儿童比对，为公益事业尽一份力。\n\n2.单次最多可以上传3张照片。\n\n3.请保证拍摄的照片清晰，并尽量显示儿童周围的标志性建筑等环境特征。\n\n</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_non_headImg">亲,上传头像让别人认识你哦！</string>
    <string name="toast_non_nickname">亲,昵称不能少于两位哦～</string>
    <string name="toast_register_failer">注册失败</string>
    <string name="toast_phone_used">手机号已被占用</string>
    <string name="toast_phone_error">手机号已被占用</string>
    <string name="toast_pic_format_error">请选择图片</string>
    <string name="toast_video_format_error">请选择视频</string>
    <string name="toast_phone_length_error">请输入11位手机号</string>
    <string name="toast_password_length_error">请输入6-20位密码</string>
    <string name="toast_password_different_error">两次输入的密码不一致</string>
    <string name="toast_sms_length_error">请输入6位验证码</string>
    <string name="toast_updata_success">上传成功</string>
    <string name="toast_updata_failer">上传失败</string>
    <string name="weibosdk_demo_toast_share_response_args_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_response_args_failed">分享失败</string>
    <string name="toast_add_userinfo_failer">完善资料失败</string>
    <string name="toast_add_userinfo_success">完善资料成功</string>
    <string name="tv_user_phone">举报人电话</string>
    <string name="tv_user_name">举报人姓名</string>
    <string name="tv_pay">支付给每人</string>
    <string name="tv_location">位置</string>
    <string name="tv_user_ID">身份证号码</string>
    <string name="tv_car_number">车牌号</string>
    <string name="tv_car_time">违法时间</string>
    <string name="tv_shooting_time">拍摄时间</string>
    <string name="tv_position">违法地点</string>
    <string name="tv_position_go_home">发现地点</string>
    <string name="tv_report_state_0">待审核</string>
    <string name="tv_report_state_1">审核通过</string>
    <string name="tv_report_state_2">审核不通过</string>
    <string name="tv_note">备注信息</string>
    <string name="tv_note_go_home">信息描述</string>
    <string name="tv_hint_user_phone">请输入手机号</string>
    <string name="tv_hint_user_name">请输入举报人姓名</string>
    <string name="tv_hint_user_ID">请输入身份证</string>
    <string name="tv_hint_car_number">请输入车牌号</string>
    <string name="tv_hint_car_time">请选择违法时间</string>
    <string name="tv_hint_shooting_time">请选择拍摄时间</string>
    <string name="tv_hint_position">请填写地点</string>
    <string name="tv_hint_note">选择视频/图片  (可选)</string>
    <string name="tv_tip_photo">选择图片  (可选)</string>
    <string name="tv_tip_video_1">选择视频  (可选)</string>
    <string name="tv_tip_other">选择图片  (可选)</string>
    <string name="tv_spread">展开</string>
    <string name="tv_inspread">收起</string>
    <string name="cb_guest_unchecked">匿名</string>
    <string name="cb_guest_checked">实名</string>
    <string name="bt_update">提交审核</string>
    <string name="bt_confirm_pay">确认支付</string>
    <string name="bt_back">返回</string>
    <string name="bt_confirm">确定</string>
    <string name="bt_confirm1">确认</string>
    <string name="bt_confirm2">是</string>
    <string name="dialog_sos_ongoing">您有一个正在进行的SOS，是否进入？</string>
    <string name="dialog_already_sos_ongoing">您已经有一个正在进行的紧急求助，是否进入？</string>
    <string name="dialog_already_safe_sos_ongoing">有未付款确认的紧急求助是否进入？</string>
    <string name="toast_error_is_auth">请实名认证</string>
    <string name="dialog_realname_auth">请您完成实名认证</string>
    <string name="dialog_realname_auth_now">为保证平台信息真实性请先实名认证</string>
    <string name="dialog_enter_50m">您已进入50米范围内，已完成任务</string>
    <string name="dialog_opengps_hint">为了保证您的正常使用，请打开GPS</string>
    <string name="toast_non_login">请登陆</string>
    <string name="toast_login_failure">登陆失败,请检查用户名 密码</string>
    <string name="toast_auto_login_failure">登录过期,重新登录</string>
    <string name="toast_non_video">请选择视频文件</string>
    <string name="toast_non_phone">请输入手机号</string>
    <string name="toast_non_name">请输入姓名</string>
    <string name="toast_non_user_ID">请输入身份证号</string>
</resources>