<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_background"
    tools:context="com.djx.pin.activity.WindowThrowInstructionActivity">

    <RelativeLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@mipmap/ic_topbg">

        <LinearLayout
            style="@style/button_selector"
            android:id="@+id/ll_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_back" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_titl_windowthrow_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_titl_windowthrowinstruction_activity"
            style="@style/title_text"
            android:layout_centerInParent="true"
             />
    </RelativeLayout>

    <TextView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/tv_reason_windowthrowinstruction_activity"/>
    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="18sp"
        android:text="@string/tv_reasondetail_windowthrowinstruction_activity"/>
    <View
        style="@style/style_view_line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="18sp"
        android:padding="10dp"
        android:text="@string/tv_attention_windowthrowinstruction_activity"/>



</LinearLayout>
