<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tv_tip_emergency_people"
        android:textColor="@color/black_light"
        android:textSize="20sp" />

    <View style="@style/style_view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_confirm_dialog_emergency"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/bt_confirm"
            android:textColor="@color/black_light"
            android:textSize="20sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <Button
            android:id="@+id/bt_cancle_dialog_emergency"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/bt_cancle"
            android:textColor="@color/black_light"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>