<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_backgroud_shape"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tv_tip_real_name"
        android:textColor="@color/black_light"
        android:textSize="18sp" />

    <View style="@style/style_view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_confirm_dialog_real_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/bt_confirm"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <Button
            android:id="@+id/bt_continue_dialog_real_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_continue"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:background="@android:color/transparent"/>

    </LinearLayout>


</LinearLayout>