<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/text_color_focused"
    tools:context="com.djx.pin.activity.SOSRecordActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/tv_tip_sos_instruction3"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/tv_tip_sos_instruction4"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>
    <TextView
        android:id="@+id/tv_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="100sp"
        android:textColor="@color/white"
        android:text="30"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/tv_tip_sos_recording"/>
    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@mipmap/ic_test_1"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
