<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/gray">

        <LinearLayout
            android:id="@+id/ll_go_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_casual" />

            <TextView
                style="@style/small_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/tv_go_home" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_window_throw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_supervise" />

            <TextView
                style="@style/small_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/tv_window_throw" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_civilization"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_civilization" />

            <TextView
                style="@style/small_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/tv_civilization" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
